--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "syntx-challenge",
+  "name": "weather-challenge",
   "version": "0.1.0",
   "description": "Starter project for an ES6 RESTful Express API",
   "main": "dist",
